--- a/3_py_while.ipynb
+++ b/3_py_while.ipynb
@@ -233,7 +233,7 @@
    "source": [
     "def sequence_no(n):\n",
     "    for i in range(1,n):\n",
-    "        for j in range(2,int(n/n**.5)+1):\n",
+    "        for j in range(2,int(n**.5)+1):\n",
     "            if i%j==0:\n",
     "                break\n",
     "        yield i \n",
